# uWindsorCourseSearchBot

./: Cargo.toml  README.md
src/: main.rs  uwin.rs
