[package]
name = "uwinsearch"
version = "0.1.0"
authors = ["lucie"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
flexi_logger = "0.9.0"
itertools = "0.7.8"
lazy_static = "1.0.2"
log = "0.4.3"
rayon = "1.0.2"
regex = "1.0.2"
reqwest = "0.8.6"
select = "0.4.2"
serenity = "0.5.4"
tantivy = "0.6.1"
typemap = "0.3.3"
